# cctrack

./: .gitignore  CHANGELOG-session-2026-03-23.md  CLAUDE.md  README.md
.claude/: launch.json
.claude/skills/: cctrack-monitor.md
.github/workflows/: ci.yml  release.yml
MEMORY/: README.md  session-2026-03-20-001500.md  session-2026-03-20-002600.md  session-2026-03-20-005200.md  session-2026-03-20-011000.md  session-2026-03-20-012000.md  session-2026-03-20-020000.md  session-2026-03-20-140000.md  session-2026-03-20-150000.md  session-2026-03-23-150000.md  session-2026-03-23-162529.md  session-2026-03-23-163803.md  session-2026-03-23-210000.md
agenttrack/: Cargo.toml  LICENSE  Makefile  README.md
agenttrack/src/: config.rs  lib.rs  main.rs  stats.rs
agenttrack/tests/: file_watcher_test.rs  (+4 more)
assets/: fake-demo.html  fake-tui.html
cctrack/: Cargo.toml  LICENSE  README.md
cctrack/src/: config.rs  lib.rs  main.rs  pricing_check.rs  stats.rs
cctrack/src/collector/: file_watcher.rs  hook_server.rs  hooks_installer.rs  mod.rs  startup_scan.rs
cctrack/src/store/: event.rs  mod.rs  models.rs  persist.rs  state.rs
cctrack/src/tui/: activity_panel.rs  agents_panel.rs  app_state.rs  layout.rs  messages_panel.rs  mod.rs  stats_panel.rs  tasks_panel.rs  theme.rs  top_bar.rs
cctrack/src/web/: mod.rs
cctrack/src/web/static/: app.js  index.html  style.css
cctrack/tests/: store_test.rs
cctrack/tests/fixtures/: inbox_brainstormer.json  inbox_team_lead.json  task_1.json  task_2.json  team_config.json
npm/: .gitignore  README.md  install.js  package.json
(+25 files in other folders)
