[package]
name = "cctrack"
version = "0.1.0"
edition = "2021"
description = "Real-time observability dashboard for Claude Code agent teams"
license = "MIT"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }

# File watching
notify = "7"
notify-debouncer-mini = "0.5"

# HTTP server (hooks + web)
axum = { version = "0.8", features = ["tokio"] }
tower-http = { version = "0.6", features = ["cors"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
tracing = "0.1"
tracing-subscriber = "0.3"
rust-embed = "8"
open = "5"
mime_guess = "2"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
